--- a/index.html
+++ b/index.html
@@ -95,12 +95,28 @@
         const kustomData = [
             {name: 'Kustom 1', price: 100000},
             {name: 'Kustom 2', price: 110000},
-            {name: 'Kustom 3', price: 120000}
+            {name: 'Kustom 3', price: 120000},
+            {name: 'Kustom 4', price: 130000},
+            {name: 'Kustom 5', price: 140000},
+            {name: 'Kustom 6', price: 150000}
         ];
 
         const beliData = [
             {name: 'Beli 1', price: 50000},
-            {name: 'Beli 2', price: 60000}
+            {name: 'Beli 2', price: 60000},
+            {name: 'Beli 3', price: 70000},
+            {name: 'Beli 4', price: 80000},
+            {name: 'Beli 5', price: 90000},
+            {name: 'Beli 6', price: 100000},
+            {name: 'Beli 7', price: 110000},
+            {name: 'Beli 8', price: 120000},
+            {name: 'Beli 9', price: 130000},
+            {name: 'Beli 10', price: 140000},
+            {name: 'Beli 11', price: 150000},
+            {name: 'Beli 12', price: 160000},
+            {name: 'Beli 13', price: 170000},
+            {name: 'Beli 14', price: 180000},
+            {name: 'Beli 15', price: 190000}
         ];
 
         function populateOptions(items) {
